--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "merriam-webster",
+  "name": "merriam-webster-or-something",
   "version": "1.0.0",
   "description": "idk",
   "main": "index.js",
